Change SVG colors to pastel mint & pink

--- a/index.html
+++ b/index.html
@@ -8,33 +8,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- <svg
-      width="100%"
-      height="0%"
-      viewBox="0 0 200 200"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        fill="#FF0066"
-        d="M23.8,-41.5C34.9,-34.7,50.9,-36.7,64.1,-31.2C77.4,-25.8,87.8,-12.9,86.4,-0.8C85,11.3,71.8,22.6,62.6,34.8C53.3,47.1,47.9,60.3,38.1,63.9C28.3,67.5,14.2,61.4,3.5,55.3C-7.1,49.1,-14.1,42.9,-24.7,39.8C-35.2,36.6,-49.3,36.6,-52.7,30.5C-56.2,24.4,-49,12.2,-43.9,2.9C-38.8,-6.3,-35.8,-12.6,-35.9,-24.8C-36,-37.1,-39.2,-55.2,-33.7,-65.4C-28.3,-75.5,-14.1,-77.5,-3.9,-70.7C6.3,-64,12.6,-48.3,23.8,-41.5Z"
-        transform="translate(100 100)"
-      />
-    </svg> -->
-    <!-- <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-      <path
-        fill="#FF0066"
-        d="M43.9,-39.1C58.4,-29.3,72.8,-14.7,76.1,3.2C79.3,21.2,71.4,42.3,56.9,53.5C42.3,64.7,21.2,66,4.6,61.3C-11.9,56.7,-23.7,46.1,-37.8,34.9C-51.9,23.7,-68.1,11.9,-69.9,-1.8C-71.6,-15.4,-58.9,-30.8,-44.8,-40.6C-30.8,-50.4,-15.4,-54.6,-0.4,-54.3C14.7,-53.9,29.3,-48.9,43.9,-39.1Z"
-        transform="translate(100 100)"
-      />
-    </svg> -->
-    <!-- <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-      <path
-        fill="#FF0066"
-        d="M25.5,-24.6C32.7,-18.3,38.1,-9.1,44.4,6.3C50.6,21.6,57.8,43.3,50.5,52.9C43.3,62.5,21.6,60.1,2.9,57.2C-15.9,54.3,-31.8,51,-40.2,41.4C-48.6,31.8,-49.5,15.9,-46.6,2.9C-43.7,-10.1,-36.9,-20.1,-28.5,-26.5C-20.1,-32.9,-10.1,-35.6,-0.5,-35.1C9.1,-34.6,18.3,-31,25.5,-24.6Z"
-        transform="translate(100 100)"
-      />
-    </svg> -->
-
     <main class="main">
       <svg
         class="svg-navy"
@@ -42,7 +15,7 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#0a0a3a"
+          fill="#fbd6d7"
           d="M43.9,-39.1C58.4,-29.3,72.8,-14.7,76.1,3.2C79.3,21.2,71.4,42.3,56.9,53.5C42.3,64.7,21.2,66,4.6,61.3C-11.9,56.7,-23.7,46.1,-37.8,34.9C-51.9,23.7,-68.1,11.9,-69.9,-1.8C-71.6,-15.4,-58.9,-30.8,-44.8,-40.6C-30.8,-50.4,-15.4,-54.6,-0.4,-54.3C14.7,-53.9,29.3,-48.9,43.9,-39.1Z"
           transform="translate(100 100)"
         />
@@ -53,7 +26,7 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#FF0066"
+          fill="#dba2b0"
           d="M62.7,-31C72.1,-20,64.2,6.2,50.8,20.8C37.5,35.3,18.8,38.1,3.1,36.3C-12.5,34.5,-24.9,28,-28.9,18.9C-32.8,9.8,-28.2,-1.9,-22,-11.2C-15.8,-20.4,-7.9,-27.2,9.4,-32.6C26.7,-38,53.4,-42.1,62.7,-31Z"
           transform="translate(100 100)"
         />
@@ -65,7 +38,7 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#FF0066"
+          fill="#c6ede1"
           d="M44.1,-18.3C52.5,-11,51.4,9,42.4,26.2C33.5,43.5,16.7,57.9,-2.2,59.2C-21.1,60.4,-42.2,48.5,-52.2,30.6C-62.3,12.7,-61.3,-11.1,-50.8,-19.6C-40.3,-28.2,-20.1,-21.5,-1.1,-20.9C17.9,-20.2,35.8,-25.6,44.1,-18.3Z"
           transform="translate(100 100)"
         />
@@ -76,7 +49,7 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#ff9933"
+          fill="#a99caf"
           d="M64,-27.8C66,-14.7,39,0.9,19.1,11.9C-0.8,22.9,-13.4,29.4,-25.6,23.4C-37.7,17.4,-49.3,-1.2,-45,-17.6C-40.6,-34,-20.3,-48.2,5.4,-50C31,-51.7,62,-41,64,-27.8Z"
           transform="translate(100 100)"
         />
