Add description of yourself to HTML structure

--- a/index.html
+++ b/index.html
@@ -80,13 +80,16 @@
             <p class="card__position">Frontend Developer Wannabe</p>
           </header>
           <p class="card__description card__description--margin">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore
-            blanditiis possimus, recusandae, aperiam nulla distinctio natus
-            numquam voluptatum, porro dolorem cupiditate pariatur at quam?
-            Praesentium impedit necessitatibus deserunt delectus, inventore odit
-            sequi eaque reiciendis quaerat maxime laudantium voluptas corporis
-            fugiat tempora ea similique dolore, dolores voluptatem et
-            perspiciatis corrupti natus voluptatibus?
+            Prawniczka z wykształcenia, od kilku lat związana z notariatem.
+            Fotografka z zamiłowania, pasjonująca się fotografią dokumentalną,
+            uliczną, portretową, krajobrazową... a najbardziej taką, której
+            jeszcze nie spróbowała! Najchętniej wiodłaby nomadyczne zycie w
+            nieustannej podrózy. Uwielbia góry, biwaki pod namiotem, włóczęgi z
+            plecakiem. Zimą snowboard, latem kajaki. Chciałaby częściej
+            zeglować, jeździć konno i fruwać ze snowkitem. Fascynuje ją dobry
+            design, czyli "piękny, elegancki ale funkcjonalny". Ma ochotę
+            zakodowywać co drugą CSSową animację, jaką zobaczy. Dzień zaczyna od
+            kawy, albo trzech.
           </p>
           <p class="card__description">
             W sieci:
