Divide description into paragraphs

--- a/index.html
+++ b/index.html
@@ -79,17 +79,21 @@
             <h1 class="card__name">Ania Wójtowicz</h1>
             <p class="card__position">Frontend Developer Wannabe</p>
           </header>
-          <p class="card__description card__description--margin">
-            Prawniczka z wykształcenia, od kilku lat związana z notariatem.
+          <p class="card__description">
+            Prawniczka z wykształcenia, od kilku lat związana z notariatem.</p>
+            <p class="card__description">
             Fotografka z zamiłowania, pasjonująca się fotografią dokumentalną,
             uliczną, portretową, krajobrazową... a najbardziej taką, której
-            jeszcze nie spróbowała! Najchętniej wiodłaby nomadyczne zycie w
+            jeszcze nie spróbowała! </p>
+            <p class="card__description">Najchętniej wiodłaby nomadyczne zycie w
             nieustannej podrózy. Uwielbia góry, biwaki pod namiotem, włóczęgi z
             plecakiem. Zimą snowboard, latem kajaki. Chciałaby częściej
-            zeglować, jeździć konno i fruwać ze snowkitem. Fascynuje ją dobry
+            zeglować, jeździć konno i fruwać ze snowkitem. </p>
+            <p class="card__description">Fascynuje ją dobry
             design, czyli "piękny, elegancki ale funkcjonalny". Ma ochotę
-            zakodowywać co drugą CSSową animację, jaką zobaczy. Dzień zaczyna od
-            kawy, albo trzech.
+            zakodowywać co drugą CSSową animację, jaką zobaczy. </p>
+            <p class="card__description">Dzień zaczyna od
+            kawy, albo trzech.</p>
           </p>
           <p class="card__description">
             W sieci:
