--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <main class="main">
+      
       <svg
-        class="svg-navy"
+        class="svg1"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -25,7 +26,7 @@
         />
       </svg>
       <svg
-        class="svg-pink"
+        class="svg2"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -36,40 +37,33 @@
         />
       </svg>
 
-      <svg
-        class="svg-pink2"
-        viewBox="0 0 200 200"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          fill="#c6ede1"
-          d="M44.1,-18.3C52.5,-11,51.4,9,42.4,26.2C33.5,43.5,16.7,57.9,-2.2,59.2C-21.1,60.4,-42.2,48.5,-52.2,30.6C-62.3,12.7,-61.3,-11.1,-50.8,-19.6C-40.3,-28.2,-20.1,-21.5,-1.1,-20.9C17.9,-20.2,35.8,-25.6,44.1,-18.3Z"
-          transform="translate(100 100)"
-        />
+      <svg class="svg3" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#a5ad9f" d="M54.3,-63.4C69,-52.4,78.7,-34,82.2,-14.5C85.7,5,83,25.7,73.6,43.1C64.3,60.5,48.3,74.6,29.4,82C10.5,89.5,-11.3,90.2,-29.5,82.8C-47.8,75.4,-62.5,60,-73.2,42C-83.9,24,-90.5,3.4,-86,-14C-81.6,-31.4,-65.9,-45.6,-49.7,-56.4C-33.5,-67.2,-16.7,-74.6,1.5,-76.4C19.8,-78.3,39.6,-74.5,54.3,-63.4Z" transform="translate(100 100)" />
       </svg>
+
       <svg
-        class="svg-orange"
+        class="svg4"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
           fill="#a99caf"
-          d="M64,-27.8C66,-14.7,39,0.9,19.1,11.9C-0.8,22.9,-13.4,29.4,-25.6,23.4C-37.7,17.4,-49.3,-1.2,-45,-17.6C-40.6,-34,-20.3,-48.2,5.4,-50C31,-51.7,62,-41,64,-27.8Z"
+          d="M59.5,-34C73.9,-9.4,80.1,20.2,68.8,40.5C57.5,60.8,28.8,71.8,1.6,70.9C-25.6,70,-51.2,57.2,-63.5,36.3C-75.8,15.4,-74.7,-13.6,-61.9,-37.3C-49.1,-60.9,-24.6,-79.3,-1,-78.7C22.6,-78.2,45.1,-58.6,59.5,-34Z"
           transform="translate(100 100)"
         />
       </svg>
 
-      <!-- <svg
-        class="svg-orange"
+      <svg
+        class="svg5"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#ff9933"
-          d="M44.7,-10C48.6,-2.4,36.1,15.1,19.8,26.9C3.4,38.6,-16.7,44.7,-27.1,37.2C-37.4,29.7,-38,8.6,-31.8,-2.1C-25.6,-12.8,-12.8,-13.1,3.8,-14.3C20.4,-15.5,40.8,-17.7,44.7,-10Z"
+          fill="#d1a19f"
+          d="M44.1,-18.3C52.5,-11,51.4,9,42.4,26.2C33.5,43.5,16.7,57.9,-2.2,59.2C-21.1,60.4,-42.2,48.5,-52.2,30.6C-62.3,12.7,-61.3,-11.1,-50.8,-19.6C-40.3,-28.2,-20.1,-21.5,-1.1,-20.9C17.9,-20.2,35.8,-25.6,44.1,-18.3Z"
           transform="translate(100 100)"
         />
-      </svg> -->
+      </svg>
 
       <article class="card">
         <img
