Adjust SVG colors

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#a99caf"
+          fill="#d7b9bb"
           d="M59.5,-34C73.9,-9.4,80.1,20.2,68.8,40.5C57.5,60.8,28.8,71.8,1.6,70.9C-25.6,70,-51.2,57.2,-63.5,36.3C-75.8,15.4,-74.7,-13.6,-61.9,-37.3C-49.1,-60.9,-24.6,-79.3,-1,-78.7C22.6,-78.2,45.1,-58.6,59.5,-34Z"
           transform="translate(100 100)"
         />
