Change SVG color... again

--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
         />
       </svg>
 
-      <svg class="svg3" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#a5ad9f" d="M54.3,-63.4C69,-52.4,78.7,-34,82.2,-14.5C85.7,5,83,25.7,73.6,43.1C64.3,60.5,48.3,74.6,29.4,82C10.5,89.5,-11.3,90.2,-29.5,82.8C-47.8,75.4,-62.5,60,-73.2,42C-83.9,24,-90.5,3.4,-86,-14C-81.6,-31.4,-65.9,-45.6,-49.7,-56.4C-33.5,-67.2,-16.7,-74.6,1.5,-76.4C19.8,-78.3,39.6,-74.5,54.3,-63.4Z" transform="translate(100 100)" />
+      <svg
+        class="svg3"
+        viewBox="0 0 200 200"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill="#a5ad9f"
+          d="M54.3,-63.4C69,-52.4,78.7,-34,82.2,-14.5C85.7,5,83,25.7,73.6,43.1C64.3,60.5,48.3,74.6,29.4,82C10.5,89.5,-11.3,90.2,-29.5,82.8C-47.8,75.4,-62.5,60,-73.2,42C-83.9,24,-90.5,3.4,-86,-14C-81.6,-31.4,-65.9,-45.6,-49.7,-56.4C-33.5,-67.2,-16.7,-74.6,1.5,-76.4C19.8,-78.3,39.6,-74.5,54.3,-63.4Z"
+          transform="translate(100 100)"
+        />
       </svg>
 
       <svg
