Fix bug in card description

--- a/index.html
+++ b/index.html
@@ -86,26 +86,26 @@
             <p class="card__position">Frontend Developer Wannabe</p>
           </header>
           <p class="card__description">
-            Prawniczka z wykształcenia, od kilku lat związana z notariatem.</p>
-            <p class="card__description">
-            Fotografka z zamiłowania, pasjonująca się fotografią dokumentalną,
-            uliczną, portretową, krajobrazową... a najbardziej taką, której
-            jeszcze nie spróbowała! </p>
-            <p class="card__description">Najchętniej wiodłaby nomadyczne zycie w
-            nieustannej podrózy. Uwielbia góry, biwaki pod namiotem, włóczęgi z
-            plecakiem. Zimą snowboard, latem kajaki. Chciałaby częściej
-            zeglować, jeździć konno i fruwać ze snowkitem. </p>
-            <p class="card__description">Fascynuje ją dobry
-            design, czyli "piękny, elegancki ale funkcjonalny". Ma ochotę
-            zakodowywać co drugą CSSową animację, jaką zobaczy. </p>
-            <p class="card__description">Dzień zaczyna od
-            kawy, albo trzech.</p>
+            Prawniczka z wykształcenia, od kilku lat związana z notariatem.
           </p>
           <p class="card__description">
-            W sieci:
-            <a href="https://www.facebook.com/nenyan" class="card__link"
-              >Facebook</a
-            >,
+            Fotografka z zamiłowania, pasjonująca się fotografią dokumentalną,
+            uliczną, portretową, krajobrazową... a najbardziej taką, której
+            jeszcze nie spróbowała!
+          </p>
+          <p class="card__description">
+            Najchętniej wiodłaby nomadyczne zycie w nieustannej podrózy.
+            Uwielbia góry, biwaki pod namiotem, włóczęgi z plecakiem. Zimą
+            snowboard, latem kajaki. Chciałaby częściej zeglować, jeździć konno
+            i fruwać ze snowkitem.
+          </p>
+          <p class="card__description">
+            Fascynuje ją dobry design, czyli "piękny, elegancki ale
+            funkcjonalny". Ma ochotę zakodowywać co drugą CSSową animację, jaką
+            zobaczy.
+          </p>
+          <p class="card__description">Dzień zaczyna od kawy, albo trzech.</p>
+
             <a
               href="https://www.instagram.com/aniawojtowicz_photostories/"
               class="card__link"
