Add and style media links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka</title>
     <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
+      integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;600;800&display=swap"
       rel="stylesheet"
     />
@@ -13,7 +19,6 @@
   </head>
   <body>
     <main class="main">
-      
       <svg
         class="svg1"
         viewBox="0 0 200 200"
@@ -106,15 +111,20 @@
           </p>
           <p class="card__description">Dzień zaczyna od kawy, albo trzech.</p>
 
+          <div class="media">
             <a
               href="https://www.instagram.com/aniawojtowicz_photostories/"
-              class="card__link"
-              >Instagram</a
-            >,
-            <a href="https://github.com/nenyancodes" class="card__link"
-              >Github</a
-            >
-          </p>
+              class="media__link"
+              ><span class="fab fa-instagram media__link__icon"></span
+            ></a>
+            <a href="https://www.facebook.com/nenyan" class="media__link"
+              ><span class="fab fa-facebook-f media__link__icon"></span
+            ></a>
+
+            <a href="https://github.com/nenyancodes" class="media__link"
+              ><span class="fab fa-github-alt media__link__icon"></span
+            ></a>
+          </div>
         </div>
       </article>
     </main>
