Polish description and fix a problem with Polish

--- a/index.html
+++ b/index.html
@@ -99,17 +99,16 @@
             jeszcze nie spróbowała!
           </p>
           <p class="card__description">
-            Najchętniej wiodłaby nomadyczne zycie w nieustannej podrózy.
+            Najchętniej wiodłaby nomadyczne życie w nieustannej podróży.
             Uwielbia góry, biwaki pod namiotem, włóczęgi z plecakiem. Zimą
-            snowboard, latem kajaki. Chciałaby częściej zeglować, jeździć konno
+            snowboard, latem kajaki. Chciałaby częściej żeglować, jeździć konno
             i fruwać ze snowkitem.
           </p>
           <p class="card__description">
-            Fascynuje ją dobry design, czyli "piękny, elegancki ale
-            funkcjonalny". Ma ochotę zakodowywać co drugą CSSową animację, jaką
-            zobaczy.
+            Fascynuje ją dobry design - piękny, elegancki ale funkcjonalny. Ma
+            ochotę zakodowywać co drugą CSSową animację, którą zobaczy.
           </p>
-          <p class="card__description">Dzień zaczyna od kawy, albo trzech.</p>
+          <p class="card__description">Dzień zaczyna od kawy. Albo trzech.</p>
 
           <div class="media">
             <a
