Add new SVG, change SVGs class names

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#213d5c"
-          d="M54.3,-63.4C69,-52.4,78.7,-34,82.2,-14.5C85.7,5,83,25.7,73.6,43.1C64.3,60.5,48.3,74.6,29.4,82C10.5,89.5,-11.3,90.2,-29.5,82.8C-47.8,75.4,-62.5,60,-73.2,42C-83.9,24,-90.5,3.4,-86,-14C-81.6,-31.4,-65.9,-45.6,-49.7,-56.4C-33.5,-67.2,-16.7,-74.6,1.5,-76.4C19.8,-78.3,39.6,-74.5,54.3,-63.4Z"
+          fill="#e5d4c5"
+          d="M50.4,-16.3C57.9,6.8,51.5,34.4,32.3,49.6C13,64.8,-19.1,67.6,-36.5,54C-54,40.5,-56.8,10.5,-48.3,-14C-39.8,-38.5,-19.9,-57.5,0.8,-57.8C21.4,-58,42.8,-39.4,50.4,-16.3Z"
           transform="translate(100 100)"
         />
       </svg>
@@ -60,8 +60,8 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#a5ad9f"
-          d="M59.5,-34C73.9,-9.4,80.1,20.2,68.8,40.5C57.5,60.8,28.8,71.8,1.6,70.9C-25.6,70,-51.2,57.2,-63.5,36.3C-75.8,15.4,-74.7,-13.6,-61.9,-37.3C-49.1,-60.9,-24.6,-79.3,-1,-78.7C22.6,-78.2,45.1,-58.6,59.5,-34Z"
+          fill="#213d5c"
+          d="M54.3,-63.4C69,-52.4,78.7,-34,82.2,-14.5C85.7,5,83,25.7,73.6,43.1C64.3,60.5,48.3,74.6,29.4,82C10.5,89.5,-11.3,90.2,-29.5,82.8C-47.8,75.4,-62.5,60,-73.2,42C-83.9,24,-90.5,3.4,-86,-14C-81.6,-31.4,-65.9,-45.6,-49.7,-56.4C-33.5,-67.2,-16.7,-74.6,1.5,-76.4C19.8,-78.3,39.6,-74.5,54.3,-63.4Z"
           transform="translate(100 100)"
         />
       </svg>
@@ -74,6 +74,18 @@
         <path
           fill="#d7b9bb"
           d="M44.1,-18.3C52.5,-11,51.4,9,42.4,26.2C33.5,43.5,16.7,57.9,-2.2,59.2C-21.1,60.4,-42.2,48.5,-52.2,30.6C-62.3,12.7,-61.3,-11.1,-50.8,-19.6C-40.3,-28.2,-20.1,-21.5,-1.1,-20.9C17.9,-20.2,35.8,-25.6,44.1,-18.3Z"
+          transform="translate(100 100)"
+        />
+      </svg>
+
+      <svg
+        class="svg6"
+        viewBox="0 0 200 200"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill="#a5ad9f"
+          d="M59.5,-34C73.9,-9.4,80.1,20.2,68.8,40.5C57.5,60.8,28.8,71.8,1.6,70.9C-25.6,70,-51.2,57.2,-63.5,36.3C-75.8,15.4,-74.7,-13.6,-61.9,-37.3C-49.1,-60.9,-24.6,-79.3,-1,-78.7C22.6,-78.2,45.1,-58.6,59.5,-34Z"
           transform="translate(100 100)"
         />
       </svg>
