Modify and style card content: margins etc.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             ochotę zakodowywać co drugą CSSową animację, którą zobaczy.
           </p>
           <p class="card__description">Dzień zaczyna od kawy. Albo trzech.</p>
+          <p class="card__description">Wbrew pozorom nie lubi różowego.</p>
 
           <div class="media">
             <a
@@ -131,7 +132,6 @@
             <a href="https://www.facebook.com/nenyan" class="media__link"
               ><span class="fab fa-facebook-f media__link__icon"></span
             ></a>
-
             <a href="https://github.com/nenyancodes" class="media__link"
               ><span class="fab fa-github-alt media__link__icon"></span
             ></a>
