--- a/index.html
+++ b/index.html
@@ -127,12 +127,19 @@
             <a
               href="https://www.instagram.com/aniawojtowicz_photostories/"
               class="media__link"
+              target="_blank"
               ><span class="fab fa-instagram media__link__icon"></span
             ></a>
-            <a href="https://www.facebook.com/nenyan" class="media__link"
+            <a
+              href="https://www.facebook.com/nenyan"
+              class="media__link"
+              target="_blank"
               ><span class="fab fa-facebook-f media__link__icon"></span
             ></a>
-            <a href="https://github.com/nenyancodes" class="media__link"
+            <a
+              href="https://github.com/nenyancodes"
+              class="media__link"
+              target="_blank"
               ><span class="fab fa-github-alt media__link__icon"></span
             ></a>
           </div>
