Change SVG blobs classes, z-indexes and positions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <main class="main">
       <svg
-        class="svg1"
+        class="main__svg-left-top"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -31,7 +31,7 @@
         />
       </svg>
       <svg
-        class="svg2"
+        class="main__svg-left-middle"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -43,7 +43,7 @@
       </svg>
 
       <svg
-        class="svg3"
+        class="main__svg-left-bottom"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -55,7 +55,7 @@
       </svg>
 
       <svg
-        class="svg4"
+        class="main__svg-right-top"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -67,7 +67,7 @@
       </svg>
 
       <svg
-        class="svg5"
+        class="main__svg-right-middle"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
@@ -79,7 +79,7 @@
       </svg>
 
       <svg
-        class="svg6"
+        class="main__svg-right-bottom"
         viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg"
       >
