Modify media links classes

--- a/index.html
+++ b/index.html
@@ -123,24 +123,24 @@
           <p class="card__description">Dzień zaczyna od kawy. Albo trzech.</p>
           <p class="card__description">Wbrew pozorom nie lubi różowego.</p>
 
-          <div class="media">
+          <div class="card__media">
             <a
               href="https://www.instagram.com/aniawojtowicz_photostories/"
-              class="media__link"
+              class="card__media__link"
               target="_blank"
-              ><span class="fab fa-instagram media__link__icon"></span
+              ><span class="fab fa-instagram"></span
             ></a>
             <a
               href="https://www.facebook.com/nenyan"
-              class="media__link"
+              class="card__media__link"
               target="_blank"
-              ><span class="fab fa-facebook-f media__link__icon"></span
+              ><span class="fab fa-facebook-f"></span
             ></a>
             <a
               href="https://github.com/nenyancodes"
-              class="media__link"
+              class="card__media__link"
               target="_blank"
-              ><span class="fab fa-github-alt media__link__icon"></span
+              ><span class="fab fa-github-alt"></span
             ></a>
           </div>
         </div>
