Minor HTML structure adjustments: pl, font family

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;600;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -98,7 +98,7 @@
           class="card__image"
         />
         <div>
-          <header class="card__info">
+          <header class="card__header">
             <h1 class="card__name">Ania Wójtowicz</h1>
             <p class="card__position">Frontend Developer Wannabe</p>
           </header>
@@ -121,7 +121,7 @@
             ochotę zakodowywać co drugą CSSową animację, którą zobaczy.
           </p>
           <p class="card__description">Dzień zaczyna od kawy. Albo trzech.</p>
-          <p class="card__description">Wbrew pozorom nie lubi różowego.</p>
+          <p class="card__description">Wbrew pozorom... nie lubi różowego!</p>
 
           <div class="card__media">
             <a
