Create special class for spans in description

--- a/index.html
+++ b/index.html
@@ -103,25 +103,31 @@
             <p class="card__position">Frontend Developer Wannabe</p>
           </header>
           <p class="card__description">
-            Prawniczka z wykształcenia, od kilku lat związana z notariatem.
+            Prawniczka z wykształcenia, od kilku lat związana z
+            <span class="special">notariatem</span>.
           </p>
           <p class="card__description">
-            Fotografka z zamiłowania, pasjonująca się fotografią dokumentalną,
-            uliczną, portretową, krajobrazową... a najbardziej taką, której
-            jeszcze nie spróbowała!
+            Fotografka z zamiłowania, pasjonująca się
+            <span class="special">fotografią</span> dokumentalną, uliczną,
+            portretową, krajobrazową... a najbardziej taką, której jeszcze nie
+            spróbowała!
           </p>
           <p class="card__description">
-            Najchętniej wiodłaby nomadyczne życie w nieustannej podróży.
-            Uwielbia góry, biwaki pod namiotem, włóczęgi z plecakiem. Zimą
-            snowboard, latem kajaki. Chciałaby częściej żeglować, jeździć konno
-            i fruwać ze snowkitem.
+            Najchętniej wiodłaby nomadyczne życie
+            <span class="special">w nieustannej podróży</span>. Uwielbia góry,
+            biwaki pod namiotem, włóczęgi z plecakiem. Zimą snowboard, latem
+            kajaki. Chciałaby częściej żeglować, jeździć konno i fruwać ze
+            snowkitem.
           </p>
           <p class="card__description">
-            Fascynuje ją dobry design - piękny, elegancki ale funkcjonalny. Ma
-            ochotę zakodowywać co drugą CSSową animację, którą zobaczy.
+            Lubi <span class="special">mądry design</span> - ładny i elegancki,
+            ale przede wszystkim funkcjonalny. <br />Ma słabość do typografii i
+            CSSowych animacji.
           </p>
           <p class="card__description">Dzień zaczyna od kawy. Albo trzech.</p>
-          <p class="card__description">Wbrew pozorom... nie lubi różowego!</p>
+          <p class="card__description">
+            <span class="special">Nie lubi różu</span> (wbrew pozorom).
+          </p>
 
           <div class="card__media">
             <a
