Change SVG blobs position and shade of navy color

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          fill="#213d5c"
-          d="M54.3,-63.4C69,-52.4,78.7,-34,82.2,-14.5C85.7,5,83,25.7,73.6,43.1C64.3,60.5,48.3,74.6,29.4,82C10.5,89.5,-11.3,90.2,-29.5,82.8C-47.8,75.4,-62.5,60,-73.2,42C-83.9,24,-90.5,3.4,-86,-14C-81.6,-31.4,-65.9,-45.6,-49.7,-56.4C-33.5,-67.2,-16.7,-74.6,1.5,-76.4C19.8,-78.3,39.6,-74.5,54.3,-63.4Z"
+          fill="#38577a"
+          d="M65.5,-21.3C72.2,-0.6,56.3,27.5,35.8,40.2C15.3,53,-9.7,50.4,-31.9,36.1C-54.1,21.8,-73.5,-4.2,-67.7,-23.6C-61.9,-43,-31,-55.8,-0.8,-55.5C29.4,-55.3,58.8,-42,65.5,-21.3Z"
           transform="translate(100 100)"
         />
       </svg>
