Change description content and font size

--- a/index.html
+++ b/index.html
@@ -120,9 +120,13 @@
             snowkitem.
           </p>
           <p class="card__description">
-            Lubi <span class="special">mądry design</span> - ładny i elegancki,
-            ale przede wszystkim funkcjonalny. <br />Ma słabość do typografii i
-            CSSowych animacji.
+            Wydaje się jej, że
+            <span class="special">web development</span> uszczęśliwi obie jej
+            półkule mózgowe - tą odpowiedzialną za logiczne, analityczne
+            myślenie i tą ceniącą kreatywny, funkcjonalny design.
+          </p>
+          <p class="card__description">
+            Ma słabość do typografii i CSSowych animacji.
           </p>
           <p class="card__description">Dzień zaczyna od kawy. Albo trzech.</p>
           <p class="card__description">
