Add a class to a description wrapper

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         kawkę"
           class="card__image"
         />
-        <div>
+        <div class="card__wrapper">
           <header class="card__header">
             <h1 class="card__name">Ania Wójtowicz</h1>
             <p class="card__position">Frontend Developer Wannabe</p>
