Add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka</title>
+
+    <meta property="og:title" content="Wizytówka Ani Wójtowicz" />
+    <meta
+      property="og:description"
+      content="Kilka słów o Ani Wójtowicz, jej zainteresowaniach pogramistycznych i pozaprogramistycznych."
+    />
+    <meta
+      property="og:image"
+      content="https://nenyancodes.github.io/WTF-business-card/og-image.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://nenyancodes.github.io/WTF-business-card/"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
